--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,27 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.link-nav > a {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.ogodo {
+  position: absolute;
+  right: 40px;
+  top: 20px;
+}
+
+li {
+  list-style: none;
+}
+
+li > a {
+  text-decoration: none;
+  color: #000;
+}
+
 .status-connection {
   width: 14px;
   height: 14px;
@@ -273,4 +294,59 @@ body {
   .chart-encompass {
     width: 100%;
   }
+}
+
+@media (max-width: 410px) {
+  .App-header {
+    width: 100%;
+    padding: 1rem;
+  }
+}
+
+.Wifi-body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wifi-form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  display: block;
+}
+
+.App-header > h1 {
+  margin-bottom: 1.8rem;
+}
+
+.App-header {
+  width: 400px;
+}
+
+.wifi-input {
+  width: 100%;
+  height: 40px;
+  padding: 0.5rem;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  background-color: #f4f4f4;
+}
+
+.wifi-btn {
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  background-color: #5082a3;
+  border-radius: 5px;
+}
+
+.wifi-btn:hover {
+  background-color: #32a852;
 }
